# grafika_engine

./: CMakeLists.txt  Doxyfile  README.md
docs/doxygen/: groups.dox  mainpage.dox
docs/output/html/: _base_component_8h.html  _base_component_8h_source.html  _box_8h.html  _box_8h_source.html  _engine_8cpp.html  _engine_8cpp_source.html  _engine_8h.html  _engine_8h.js  _engine_8h_source.html  _game_object_8cpp.html  _game_object_8cpp_source.html  _game_object_8h.html  _game_object_8h_source.html  _i_game_8h.html  _i_game_8h_source.html  _input_8cpp.html  _input_8cpp_source.html  _input_8h.html  _input_8h.js  _input_8h_source.html  _my_game_8h.html  _my_game_8h_source.html  _point2_d_8cpp.html  _point2_d_8cpp_source.html  _point2_d_8h.html  _point2_d_8h_source.html  _primitives_8h.html  _primitives_8h_source.html  _r_e_a_d_m_e_8md.html  _renderer_8cpp.html  _renderer_8cpp.js  _renderer_8cpp_source.html  _renderer_8h.html  _renderer_8h_source.html  _shape_component_8h.html  _shape_component_8h.js  _shape_component_8h_source.html  _ship_8h.html  _ship_8h_source.html  _ufo_8h.html  (+109 more)
docs/output/html/search/: all_0.js  all_1.js  (+87 more)
src/: main.cpp
src/DemoMyGame/: Box.h  MyGame.h  Player.h  Player2.h  Poly.h  Ship.h  Ufo.h
src/Engine/: AssetManager.cpp  AssetManager.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  IGame.h
src/Engine/Components/: AnimatedSpriteComponent.h  BaseComponent.h  ShapeComponent.h  SpriteComponent.h
src/Engine/Input/: Input.cpp  Input.h
src/Engine/Math/: Point2D.cpp  Point2D.h  Primitives.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
